# poseidon-circe

./: .gitmodules  Makefile.am  README.md  check_includes.sh  circe.sql  common  configure.ac  create_project.sh  dump_mysql-table-structure.sh  makedeb.sh  precompiled.hpp  precompiled.hpp.gch  protocol  run.sh  servers.md
circe-@@temp-late@@/: Makefile.am  src
circe-@@temp-late@@/circe-@@temp-late@@/src/: mmain.cpp  mmain.hpp
circe-@@temp-late@@/src/: mmain.cpp  mmain.hpp
circe-auth/: Makefile.am  src
circe-auth/circe-auth/src/: mmain.cpp  mmain.hpp  servlets.cpp
circe-auth/circe-auth/src/singletons/: auth_acceptor.cpp  servlet_container.cpp  user_defined_functions.cpp  user_defined_functions.hpp
circe-auth/src/: auth_servlets.cpp  mmain.cpp  mmain.hpp  servlets.cpp  user_defined_functions.cpp  user_defined_functions.hpp
circe-auth/src/singletons/: auth_acceptor.cpp  auth_acceptor.hpp  servlet_container.cpp  servlet_container.hpp  user_defined_functions.hpp
circe-box/: Makefile.am  src
circe-box/circe-box/src/: mmain.cpp  mmain.hpp  servlets.cpp  websocket_shadow_session.cpp  websocket_shadow_session.hpp
circe-box/circe-box/src/singletons/: box_acceptor.cpp  pilot_connector.cpp  servlet_container.cpp  servlet_container.hpp  user_defined_functions.cpp  user_defined_functions.hpp  websocket_shadow_session_supervisor.cpp  websocket_shadow_session_supervisor.hpp
circe-box/src/: box_servlets.cpp  client_websocket_shadow_session.cpp  mmain.cpp  mmain.hpp  servlets.cpp  user_defined_functions.cpp  user_defined_functions.hpp  websocket_shadow_session.cpp  websocket_shadow_session.hpp
circe-box/src/singletons/: box_acceptor.cpp  box_acceptor.hpp  pilot_connector.cpp  pilot_connector.hpp  servlet_container.cpp  servlet_container.hpp  user_defined_functions.cpp  user_defined_functions.hpp  websocket_shadow_session_supervisor.cpp  websocket_shadow_session_supervisor.hpp
circe-common/: Makefile.am
circe-common/circe-common/src/: define_interserver_servlet_for.hpp  fwd.hpp  interserver_acceptor.cpp  interserver_acceptor.hpp  interserver_connection.cpp  interserver_connection.hpp  interserver_connector.cpp  interserver_connector.hpp  interserver_response.cpp  interserver_response.hpp  interserver_servlet_callback.hpp  interserver_servlet_container.cpp  mmain.cpp  mmain.hpp  precompiled.hpp
circe-common/protocol/: error_codes.hpp  messages.hpp  messages_fwd.hpp
circe-common/src/: cbpp_response.cpp  cbpp_response.hpp  cbpp_servlet_map.cpp  cbpp_servlet_map.hpp  define_interserver_servlet.hpp  define_interserver_servlet_for.hpp  encryption.cpp  encryption.hpp  fwd.hpp  interserver_acceptor.cpp  interserver_acceptor.hpp  interserver_connection.cpp  interserver_connection.hpp  interserver_connector.cpp  interserver_connector.hpp  interserver_response.cpp  interserver_response.hpp  interserver_servlet_callback.hpp  interserver_servlet_container.cpp  interserver_servlet_container.hpp  log.hpp  message_rtti.cpp  mmain.cpp  mmain.hpp  precompiled.hpp  utilities.hpp
circe-foyer/: Makefile.am  src
circe-foyer/circe-foyer/src/: mmain.cpp  mmain.hpp  servlets.cpp
circe-foyer/circe-foyer/src/singletons/: box_connector.cpp  foyer_acceptor.cpp  foyer_acceptor.hpp  servlet_container.cpp  servlet_container.hpp
circe-foyer/src/: foyer_servlets.cpp  mmain.cpp  mmain.hpp  servlets.cpp
circe-foyer/src/singletons/: box_connector.cpp  box_connector.hpp  foyer_acceptor.cpp  foyer_acceptor.hpp  servlet_container.cpp  servlet_container.hpp
circe-gate/: Makefile.am  src
circe-gate/circe-gate/src/: client_http_session.cpp  client_http_session.hpp  client_websocket_session.cpp  client_websocket_session.hpp  mmain.cpp  mmain.hpp  servlets.cpp
circe-gate/circe-gate/src/singletons/: auth_connector.cpp  client_http_acceptor.cpp  client_http_acceptor.hpp  foyer_connector.cpp  foyer_connector.hpp  ip_ban_list.cpp  ip_ban_list.hpp  servlet_container.cpp  servlet_container.hpp
circe-gate/src/: client_http_session.cpp  client_http_session.hpp  client_websocket_session.cpp  client_websocket_session.hpp  mmain.cpp  mmain.hpp  servlets.cpp
circe-gate/src/singletons/: auth_connector.cpp  auth_connector.hpp  client_http_acceptor.cpp  client_http_acceptor.hpp  foyer_connector.cpp  foyer_connector.hpp  ip_ban_list.cpp  ip_ban_list.hpp  servlet_container.cpp  servlet_container.hpp
circe-pilot/: Makefile.am  src
circe-pilot/circe-pilot/src/: compass.cpp  compass.hpp  compass_key.cpp  compass_key.hpp  compass_lock.cpp  compass_lock.hpp  compass_watcher_map.cpp  compass_watcher_map.hpp  mmain.cpp  mmain.hpp  orm.hpp  servlets.cpp
circe-pilot/circe-pilot/src/singletons/: compass_repository.cpp  pilot_acceptor.cpp  pilot_acceptor.hpp  servlet_container.cpp  servlet_container.hpp
circe-pilot/src/: compass.cpp  compass.hpp  compass_key.cpp  compass_key.hpp  compass_lock.cpp  compass_lock.hpp  compass_watcher_map.cpp  compass_watcher_map.hpp  mmain.cpp  mmain.hpp  orm.cpp  orm.hpp  servlets.cpp
circe-pilot/src/singletons/: compass_repository.cpp  compass_repository.hpp  pilot_acceptor.cpp  pilot_acceptor.hpp  servlet_container.cpp  servlet_container.hpp
doc/: server_structure.asta
etc/circe/: circe-auth-template.conf  circe-auth.conf  circe-box-template.conf  circe-box.conf  circe-common-template.conf  circe-common.conf  circe-foyer-template.conf  circe-foyer.conf  circe-gate-template.conf  circe-gate.conf  circe-pilot-template.conf  circe-pilot.conf  circe.sql  main-template.conf
misc/: circe.sql
protocol/: error_codes.hpp  exception.hpp  messages.cpp  messages_auth.hpp  messages_box.hpp  messages_common.hpp  messages_external_definitions.cpp  messages_foyer.hpp  messages_foyer_box.hpp  messages_foyer_business.hpp  messages_fwd.hpp  messages_gate.hpp  messages_gate_auth.hpp  messages_gate_foyer.hpp  messages_pilot.hpp  mongodb_external_definitions.cpp  mysql_external_definitions.cpp  mysql_pilot.hpp  utilities.hpp
