ACLOCAL_AMFLAGS = -I m4
AUTOMAKE_OPTIONS = foreign subdir-objects

EXTRA_DIST = \
	etc/circe/main-template.conf	\
	etc/circe/circe-common-template.conf	\
	etc/circe/circe-gate-template.conf	\
	etc/circe/circe-foyer-template.conf	\
	etc/circe/circe-auth-template.conf	\
	etc/circe/circe-box-template.conf	\
	etc/circe/circe-pilot-template.conf
##_INSERT_NEW_CONFIG_FILE_HERE

SUBDIRS = \
	circe-common	\
	circe-gate	\
	circe-foyer	\
	circe-auth	\
	circe-box	\
	circe-pilot
##_INSERT_NEW_DIRECTORY_HERE
